force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Account_Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Run_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Last Run Time</label>
    <type>DateTime</type>
</CustomField>