force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Account_Max_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Max_Updated_Date__c</fullName>
    <description>Stores the max( Updated_Date) from tbl_Customer. This value is used by the CustomersToSFDC integration to pull the latest updated data since the job last ran.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Max Updated Date</label>
    <type>DateTime</type>
</CustomField>