force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Application_Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Last_Run_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Last Run Time</label>
    <type>DateTime</type>
</CustomField>