force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Application_Max_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Max_Updated_Date__c</fullName>
    <description>Stores the max( Updated_Date) from tbl_Application This value is used by the ApplicationsToSFDC integration to pull the latest updated data since the job last ran.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Max Updated Date</label>
    <type>DateTime</type>
</CustomField>