force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Decision_Max_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Decision_Max_Updated_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Decision Max Updated Time</label>
    <type>DateTime</type>
</CustomField>