force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Product_Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Product_Last_Run_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Last Run Time</label>
    <type>DateTime</type>
</CustomField>