force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Product_Max_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Max_Updated_Date__c</fullName>
    <description>Stores the max( Updated_Date) from tbl_Account_Products. This value is used by the ProductsToSFDC integration to pull the latest updated data since the job last ran.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Max Updated Date</label>
    <type>DateTime</type>
</CustomField>