force-app/main/default/objects/Integration_Last_Run_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Account_CustomerID_Last_Run_Time__c</columns>
    <columns>Account_Last_Run_Time__c</columns>
    <columns>Account_Max_Updated_Date__c</columns>
    <columns>Account_SalesforceID_Last_Run_Time__c</columns>
    <columns>Application_Last_Run_Time__c</columns>
    <columns>Application_Max_Updated_Date__c</columns>
    <columns>Decision_Max_Updated_Time__c</columns>
    <columns>Product_Last_Run_Time__c</columns>
    <columns>Product_Max_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>